--- a/LabAspApi_0/etc/nginx_temp.conf
+++ b/LabAspApi_0/etc/nginx_temp.conf
@@ -13,15 +13,15 @@ http {
     }
 
     upstream labaspapi1 {
-        server labaspapi_aaa_{{labaspapi_aaa_env}}:5000;
+        server labaspapi_aaaa_{{labaspapi_aaa_env}}:5000;
     }
 
     upstream labaspapi2 {
-        server labaspapi_bbb_{{labaspapi_bbb_env}}:5000;
+        server labaspapi_bbbb_{{labaspapi_bbb_env}}:5000;
     }
 
     upstream labaspapi2 {
-        server labaspapi_ccc_{{labaspapi_ccc_env}}:5000;
+        server labaspapi_cccc_{{labaspapi_ccc_env}}:5000;
     }
 
     server {
@@ -36,15 +36,15 @@ http {
         }
 
         location /aaa/ {
-            proxy_pass http://labaspapi_aaa/;
+            proxy_pass http://labaspapi_aaaa/;
         }
 
         location /bbb/ {
-            proxy_pass http://labaspapi_bbb/;
+            proxy_pass http://labaspapi_bbbb/;
         }
 
         location /ccc/ {
-            proxy_pass http://labaspapi_ccc/;
+            proxy_pass http://labaspapi_cccc/;
         }
 
         location = /favicon.ico {
