--- a/LabAspApi_0/docker-compose.yml
+++ b/LabAspApi_0/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "80:8080"
     volumes:
-      - ./etc/nginx:/etc/nginx:ro
+      - ./nginx:/etc/nginx:ro
     networks:
       - labaspapi_0_network
 #--------------------------------------------------
