--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -12,16 +12,16 @@ http {
         server labaspapi_{{labaspapi_env}}:5000;
     }
 
-    upstream labaspapi1 {
-        server labaspapi_aaaa_{{labaspapi_aaa_env}}:5000;
+    upstream labaspapi_aaaa {
+        server labaspapi_aaaa_{{labaspapi_aaaa_env}}:5000;
     }
 
-    upstream labaspapi2 {
-        server labaspapi_bbbb_{{labaspapi_bbb_env}}:5000;
+    upstream labaspapi_bbbb {
+        server labaspapi_bbbb_{{labaspapi_bbbb_env}}:5000;
     }
 
-    upstream labaspapi2 {
-        server labaspapi_cccc_{{labaspapi_ccc_env}}:5000;
+    upstream labaspapi_cccc {
+        server labaspapi_cccc_{{labaspapi_cccc_env}}:5000;
     }
 
     server {
