--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -35,15 +35,15 @@ http {
             proxy_pass http://labaspapi/;
         }
 
-        location /aaa/ {
+        location /aaaa/ {
             proxy_pass http://labaspapi_aaaa/;
         }
 
-        location /bbb/ {
+        location /bbbb/ {
             proxy_pass http://labaspapi_bbbb/;
         }
 
-        location /ccc/ {
+        location /cccc/ {
             proxy_pass http://labaspapi_cccc/;
         }
 
