Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     access_log off;
 
     upstream labaspapi {
-        server labaspapi_blue:5000;
+        server labaspapi_green:5000;
     }
 
     upstream labaspapi_aaaa {
@@ -21,7 +21,7 @@ http {
     }
 
     upstream labaspapi_cccc {
-        server labaspapi_cccc_blue:5000;
+        server labaspapi_cccc_green:5000;
     }
 
     server {
@@ -35,15 +35,15 @@ http {
             proxy_pass http://labaspapi/;
         }
 
-        location /aaa/ {
+        location /aaaa/ {
             proxy_pass http://labaspapi_aaaa/;
         }
 
-        location /bbb/ {
+        location /bbbb/ {
             proxy_pass http://labaspapi_bbbb/;
         }
 
-        location /ccc/ {
+        location /cccc/ {
             proxy_pass http://labaspapi_cccc/;
         }
 
