--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -8,20 +8,16 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi {
-        server labaspapi_green:5000;
+    upstream labaspapi_dddd {
+        server labaspapi_dddd_blue:5000;
     }
 
-    upstream labaspapi_aaaa {
-        server labaspapi_aaaa_blue:5000;
+    upstream labaspapi_eeee {
+        server labaspapi_eeee_blue:5000;
     }
 
-    upstream labaspapi_bbbb {
-        server labaspapi_bbbb_blue:5000;
-    }
-
-    upstream labaspapi_cccc {
-        server labaspapi_cccc_green:5000;
+    upstream labaspapi_ffff {
+        server labaspapi_ffff_blue:5000;
     }
 
     server {
@@ -31,20 +27,16 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /0/ {
-            proxy_pass http://labaspapi/;
+        location /dddd/ {
+            proxy_pass http://labaspapi_dddd/;
         }
 
-        location /aaaa/ {
-            proxy_pass http://labaspapi_aaaa/;
+        location /eeee/ {
+            proxy_pass http://labaspapi_eeee/;
         }
 
-        location /bbbb/ {
-            proxy_pass http://labaspapi_bbbb/;
-        }
-
-        location /cccc/ {
-            proxy_pass http://labaspapi_cccc/;
+        location /ffff/ {
+            proxy_pass http://labaspapi_ffff/;
         }
 
         location = /favicon.ico {
