Final deployment completed

--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -8,20 +8,16 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi {
-        server labaspapi_green:5000;
+    upstream labaspapi_gggg {
+        server labaspapi_gggg_blue:5000;
     }
 
-    upstream labaspapi_aaaa {
-        server labaspapi_aaaa_blue:5000;
+    upstream labaspapi_hhhh {
+        server labaspapi_hhhh_blue:5000;
     }
 
-    upstream labaspapi_bbbb {
-        server labaspapi_bbbb_blue:5000;
-    }
-
-    upstream labaspapi_cccc {
-        server labaspapi_cccc_green:5000;
+    upstream labaspapi_kkkk {
+        server labaspapi_kkkk_blue:5000;
     }
 
     server {
@@ -31,20 +27,16 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /0/ {
-            proxy_pass http://labaspapi/;
+        location /gggg/ {
+            proxy_pass http://labaspapi_gggg/;
         }
 
-        location /aaaa/ {
-            proxy_pass http://labaspapi_aaaa/;
+        location /hhhh/ {
+            proxy_pass http://labaspapi_hhhh/;
         }
 
-        location /bbbb/ {
-            proxy_pass http://labaspapi_bbbb/;
-        }
-
-        location /cccc/ {
-            proxy_pass http://labaspapi_cccc/;
+        location /kkkk/ {
+            proxy_pass http://labaspapi_kkkk/;
         }
 
         location = /favicon.ico {
