--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -8,9 +8,7 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi {
-        server labaspapi_{{labaspapi_env}}:5000;
-    }
+    upstream labaspapi{server labaspapi_{{labaspapi_env}}:5000;}
 
     upstream labaspapi_aaaa {
         server labaspapi_aaaa_{{labaspapi_aaaa_env}}:5000;
