Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -8,16 +8,14 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi {
-        server labaspapi_blue:5000;
-    }
+    upstream labaspapi{server labaspapi_blue:5000;}
 
     upstream labaspapi_aaaa {
-        server labaspapi_aaaa_green:5000;
+        server labaspapi_aaaa_blue:5000;
     }
 
     upstream labaspapi_bbbb {
-        server labaspapi_bbbb_green:5000;
+        server labaspapi_bbbb_blue:5000;
     }
 
     upstream labaspapi_cccc {
