--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -9,18 +9,9 @@ http {
     access_log off;
 
     upstream labaspapi{server labaspapi_{{labaspapi_env}}:5000;}
-
-    upstream labaspapi_aaaa {
-        server labaspapi_aaaa_{{labaspapi_aaaa_env}}:5000;
-    }
-
-    upstream labaspapi_bbbb {
-        server labaspapi_bbbb_{{labaspapi_bbbb_env}}:5000;
-    }
-
-    upstream labaspapi_cccc {
-        server labaspapi_cccc_{{labaspapi_cccc_env}}:5000;
-    }
+    upstream labaspapi_aaaa{server labaspapi_aaaa_{{labaspapi_aaaa_env}}:5000;}
+    upstream labaspapi_bbbb{server labaspapi_bbbb_{{labaspapi_bbbb_env}}:5000;}
+    upstream labaspapi_cccc{server labaspapi_cccc_{{labaspapi_cccc_env}}:5000;}
 
     server {
         listen 8080;
@@ -29,9 +20,7 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /0/ {
-            proxy_pass http://labaspapi/;
-        }
+        location /0/{proxy_pass http://labaspapi/;}
 
         location /aaaa/ {
             proxy_pass http://labaspapi_aaaa/;
