--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -8,19 +8,10 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi{server labaspapi_blue:5000;}
-
-    upstream labaspapi_aaaa {
-        server labaspapi_aaaa_blue:5000;
-    }
-
-    upstream labaspapi_bbbb {
-        server labaspapi_bbbb_blue:5000;
-    }
-
-    upstream labaspapi_cccc {
-        server labaspapi_cccc_blue:5000;
-    }
+    upstream labaspapi{server labaspapi_green:5000;}
+    upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
+    upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
+    upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     server {
         listen 8080;
@@ -29,9 +20,7 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /0/ {
-            proxy_pass http://labaspapi/;
-        }
+        location /0/{proxy_pass http://labaspapi/;}
 
         location /aaaa/ {
             proxy_pass http://labaspapi_aaaa/;
