--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -8,10 +8,7 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi{server labaspapi_{{labaspapi_env}}:5000;}
-    upstream labaspapi_aaaa{server labaspapi_aaaa_{{labaspapi_aaaa_env}}:5000;}
-    upstream labaspapi_bbbb{server labaspapi_bbbb_{{labaspapi_bbbb_env}}:5000;}
-    upstream labaspapi_cccc{server labaspapi_cccc_{{labaspapi_cccc_env}}:5000;}
+    {{upstreams}}
 
     server {
         listen 8080;
@@ -21,18 +18,9 @@ http {
         include /etc/nginx/common/proxy_common.conf;
 
         location /0/{proxy_pass http://labaspapi/;}
-
-        location /aaaa/ {
-            proxy_pass http://labaspapi_aaaa/;
-        }
-
-        location /bbbb/ {
-            proxy_pass http://labaspapi_bbbb/;
-        }
-
-        location /cccc/ {
-            proxy_pass http://labaspapi_cccc/;
-        }
+        location /aaaa/{proxy_pass http://labaspapi_aaaa/;}
+        location /bbbb/{proxy_pass http://labaspapi_bbbb/;}
+        location /cccc/{proxy_pass http://labaspapi_cccc/;}
 
         location = /favicon.ico {
             log_not_found off;
