--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -8,8 +8,7 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    {{upstreams}}
-
+{{upstreams}}
     server {
         listen 8080;
 
@@ -17,11 +16,7 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /0/{proxy_pass http://labaspapi/;}
-        location /aaaa/{proxy_pass http://labaspapi_aaaa/;}
-        location /bbbb/{proxy_pass http://labaspapi_bbbb/;}
-        location /cccc/{proxy_pass http://labaspapi_cccc/;}
-
+{{locations}}
         location = /favicon.ico {
             log_not_found off;
             return 204;
