Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
 upstream labaspapi { server labaspapi_green:5000; }
 upstream labaspapi_aaaa { server labaspapi_aaaa_blue:5000; }
 upstream labaspapi_bbbb { server labaspapi_bbbb_green:5000; }
-upstream labaspapi_cccc { server labaspapi_cccc_blue:5000; }
+upstream labaspapi_cccc { server labaspapi_cccc_green:5000; }
 
     server {
         listen 8080;
@@ -20,7 +20,7 @@ upstream labaspapi_cccc { server labaspapi_cccc_blue:5000; }
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /labaspapi/ { proxy_pass http://labaspapi/; }
+location /svwl/ { proxy_pass http://labaspapi/; }
 location /aaaa/ { proxy_pass http://labaspapi_aaaa/; }
 location /bbbb/ { proxy_pass http://labaspapi_bbbb/; }
 location /cccc/ { proxy_pass http://labaspapi_cccc/; }
