--- a/LabAspApi_1/nginx_temp.conf
+++ b/LabAspApi_1/nginx_temp.conf
@@ -8,18 +8,7 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi_dddd {
-        server labaspapi_dddd_{{labaspapi_dddd_env}}:5000;
-    }
-
-    upstream labaspapi_eeee {
-        server labaspapi_eeee_{{labaspapi_eeee_env}}:5000;
-    }
-
-    upstream labaspapi_ffff {
-        server labaspapi_ffff_{{labaspapi_ffff_env}}:5000;
-    }
-
+{{upstreams}}
     server {
         listen 8080;
 
@@ -27,18 +16,7 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /dddd/ {
-            proxy_pass http://labaspapi_dddd/;
-        }
-
-        location /eeee/ {
-            proxy_pass http://labaspapi_eeee/;
-        }
-
-        location /ffff/ {
-            proxy_pass http://labaspapi_ffff/;
-        }
-
+{{locations}}
         location = /favicon.ico {
             log_not_found off;
             return 204;
