--- a/LabAspApi_2/nginx_temp.conf
+++ b/LabAspApi_2/nginx_temp.conf
@@ -8,18 +8,7 @@ http {
     error_log /var/log/nginx/error.log error;
     access_log off;
 
-    upstream labaspapi_gggg {
-        server labaspapi_gggg_{{labaspapi_gggg_env}}:5000;
-    }
-
-    upstream labaspapi_hhhh {
-        server labaspapi_hhhh_{{labaspapi_hhhh_env}}:5000;
-    }
-
-    upstream labaspapi_kkkk {
-        server labaspapi_kkkk_{{labaspapi_kkkk_env}}:5000;
-    }
-
+{{upstreams}}
     server {
         listen 8080;
 
@@ -27,18 +16,7 @@ http {
 
         include /etc/nginx/common/proxy_common.conf;
 
-        location /gggg/ {
-            proxy_pass http://labaspapi_gggg/;
-        }
-
-        location /hhhh/ {
-            proxy_pass http://labaspapi_hhhh/;
-        }
-
-        location /kkkk/ {
-            proxy_pass http://labaspapi_kkkk/;
-        }
-
+{{locations}}
         location = /favicon.ico {
             log_not_found off;
             return 204;
