Final deployment completed

--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -5,11 +5,8 @@ events {
 }
 
 http {
-    error_log /var/log/nginx/error.log error;
-    access_log off;
-
 upstream labaspapi_gggg { server labaspapi_gggg_blue:5000; }
-upstream labaspapi_hhhh { server labaspapi_hhhh_blue:5000; }
+upstream labaspapi_hhhh { server labaspapi_hhhh_green:5000; }
 upstream labaspapi_kkkk { server labaspapi_kkkk_blue:5000; }
 
     server {
