--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,10 +5,7 @@ events {
 }
 
 http {
-    error_log /var/log/nginx/error.log error;
-    access_log off;
-
-upstream labaspapi_dddd { server labaspapi_dddd_blue:5000; }
+upstream labaspapi_dddd { server labaspapi_dddd_green:5000; }
 upstream labaspapi_eeee { server labaspapi_eeee_blue:5000; }
 upstream labaspapi_ffff { server labaspapi_ffff_blue:5000; }
 
