--- a/LabAspApi_1/docker-compose.yml
+++ b/LabAspApi_1/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "81:8080"
     volumes:
       - ./nginx:/etc/nginx:ro
+      - ./log/nginx:/var/log/nginx
     networks:
       - labaspapi_1_network
 #--------------------------------------------------
