Final deployment completed

--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_gggg{server labaspapi_gggg_blue:5000;}
+upstream labaspapi_gggg{server labaspapi_gggg_green:5000;}
 upstream labaspapi_hhhh{server labaspapi_hhhh_blue:5000;}
 upstream labaspapi_kkkk{server labaspapi_kkkk_blue:5000;}
 
