--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 8080;
 
-        server_name serverwill.net;
+{{server_name}}
 
         include /etc/nginx/common/proxy_common.conf;
 
@@ -17,6 +17,11 @@ http {
         location = /favicon.ico {
             log_not_found off;
             return 204;
+        }
+
+        location / {
+            deny all;
+            error_log /dev/null emerg;
         }
     }
 }
