Final deployment completed

--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -7,12 +7,12 @@ events {
 http {
 upstream labaspapi_gggg{server labaspapi_gggg_blue:5000;}
 upstream labaspapi_hhhh{server labaspapi_hhhh_green:5000;}
-upstream labaspapi_kkkk{server labaspapi_kkkk_blue:5000;}
+upstream labaspapi_kkkk{server labaspapi_kkkk_green:5000;}
 
     server {
         listen 8080;
 
-        server_name serverwill.net;
+server_name api2.serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
@@ -23,6 +23,11 @@ location /kkkk/api/ {proxy_pass http://labaspapi_kkkk/;}
         location = /favicon.ico {
             log_not_found off;
             return 204;
+        }
+
+        location / {
+            deny all;
+            error_log /dev/null emerg;
         }
     }
 }
