--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,14 +5,14 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_green:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
     server {
         listen 8080;
 
-        server_name serverwill.net;
+server_name api1.serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
@@ -23,6 +23,11 @@ location /ffff/api/ {proxy_pass http://labaspapi_ffff/;}
         location = /favicon.ico {
             log_not_found off;
             return 204;
+        }
+
+        location / {
+            deny all;
+            error_log /dev/null emerg;
         }
     }
 }
