--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -9,7 +9,8 @@ http {
     server {
         listen 8080;
 
-{{server_name}}
+#{{server_name}}
+        server_name serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
