--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -8,12 +8,13 @@ http {
 upstream labaspapi{server labaspapi_blue:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
-upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
+upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
 
     server {
         listen 8080;
 
-server_name api0.serverwill.net;
+#server_name api0.serverwill.net;
+        server_name serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
