Final deployment completed

--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_green:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
@@ -24,11 +24,6 @@ location /ffff/api/ {proxy_pass http://labaspapi_ffff/;}
         location = /favicon.ico {
             log_not_found off;
             return 204;
-        }
-
-        location / {
-            deny all;
-            error_log /dev/null emerg;
         }
     }
 }
