Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
 upstream labaspapi{server labaspapi_blue:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
-upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
+upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     server {
         listen 8080;
@@ -26,11 +26,6 @@ location /cccc/api/ {proxy_pass http://labaspapi_cccc/;}
         location = /favicon.ico {
             log_not_found off;
             return 204;
-        }
-
-        location / {
-            deny all;
-            error_log /dev/null emerg;
         }
     }
 }
