--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -19,5 +19,10 @@ http {
             log_not_found off;
             return 204;
         }
+
+        location / {
+            deny all;
+            error_log /dev/null emerg;
+        }
     }
 }
