--- a/LabAspApi_0/docker-compose.yml
+++ b/LabAspApi_0/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     image: nginx:latest
     container_name: labaspapi_0_nginx
     ports:
-      - "80:8080"
+      - "80:8080" # 외부:내부(nginx 컨테이너). nginx.conf 의 listen 포트와 같도록 설정
     volumes:
       - ./nginx:/etc/nginx:ro
       - ./log/nginx:/var/log/nginx
