Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -8,10 +8,10 @@ http {
 upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
-upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
+upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     server {
-        listen 99;
+        listen 8080;
 
 #{{server_name}}
         server_name serverwill.net;
