--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,12 +5,12 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_blue:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_blue:5000;}
 
     server {
-        listen 98;
+        listen 8081;
 
 #server_name api1.serverwill.net;
         server_name serverwill.net;
