--- a/LabAspApi_2/nginx_temp.conf
+++ b/LabAspApi_2/nginx_temp.conf
@@ -9,8 +9,8 @@ http {
     server {
         listen 8082;
 
-#{{server_name}}
-        server_name serverwill.net;
+{{server_name}}
+        #server_name serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
