--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,21 +5,21 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_blue:5000;}
-upstream labaspapi_ffff{server labaspapi_ffff_blue:5000;}
+upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
     server {
         listen 8081;
 
-#server_name api1.serverwill.net;
-        server_name serverwill.net;
+server_name api1.serverwill.net;
+        #server_name serverwill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /dddd/api/ {proxy_pass http://labaspapi_dddd/;}
-location /eeee/api/ {proxy_pass http://labaspapi_eeee/;}
-location /ffff/api/ {proxy_pass http://labaspapi_ffff/;}
+location /dddd/ {proxy_pass http://labaspapi_dddd/;}
+location /eeee/ {proxy_pass http://labaspapi_eeee/;}
+location /ffff/ {proxy_pass http://labaspapi_ffff/;}
 
         location = /favicon.ico {
             log_not_found off;
