--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -13,8 +13,8 @@ upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
     server {
         listen 8080;
 
-server_name api0.serverwill.net;
-        #server_name serverwill.net;
+server_name api0.servewill.net;
+        #server_name servewill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
