--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -7,10 +7,9 @@ events {
 http {
 {{upstreams}}
     server {
-        listen 8080;
-
-{{server_name}}
-        #server_name serverwill.net;
+        listen 80;
+        
+        server_name servewill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
