--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -10,10 +10,10 @@ upstream labaspapi_eeee{server labaspapi_eeee_green:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
     server {
-        listen 8080;
+        listen 8081;
 
-server_name api1.serverwill.net;
-        #server_name serverwill.net;
+server_name api1.servewill.net;
+        #server_name servewill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
