--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -5,15 +5,14 @@ events {
 }
 
 http {
-upstream labaspapi_gggg{server labaspapi_gggg_green:5000;}
-upstream labaspapi_hhhh{server labaspapi_hhhh_blue:5000;}
-upstream labaspapi_kkkk{server labaspapi_kkkk_green:5000;}
+upstream labaspapi_gggg{server labaspapi_gggg_blue:5000;}
+upstream labaspapi_hhhh{server labaspapi_hhhh_green:5000;}
+upstream labaspapi_kkkk{server labaspapi_kkkk_blue:5000;}
 
     server {
-        listen 8082;
+        listen 80;
 
-server_name api2.servewill.net;
-        #server_name servewill.net;
+        server_name servewill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
