Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -5,23 +5,22 @@ events {
 }
 
 http {
-upstream labaspapi{server labaspapi_green:5000;}
-upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
-upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
-upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
+upstream labaspapi{server labaspapi_blue:5000;}
+upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
+upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
+upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     server {
-        listen 8080;
-
-server_name api0.servewill.net;
-        #server_name servewill.net;
+        listen 80;
+        
+        server_name servewill.net;
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /svwl/ {proxy_pass http://labaspapi/;}
-location /aaaa/ {proxy_pass http://labaspapi_aaaa/;}
-location /bbbb/ {proxy_pass http://labaspapi_bbbb/;}
-location /cccc/ {proxy_pass http://labaspapi_cccc/;}
+location /api/svwl/ {proxy_pass http://labaspapi/;}
+location /api/aaaa/ {proxy_pass http://labaspapi_aaaa/;}
+location /api/bbbb/ {proxy_pass http://labaspapi_bbbb/;}
+location /api/cccc/ {proxy_pass http://labaspapi_cccc/;}
 
         location = /favicon.ico {
             log_not_found off;
