--- a/LabAspApi_0/docker-compose.yml
+++ b/LabAspApi_0/docker-compose.yml
@@ -1,8 +1,16 @@
+x-log: &log
+  logging:
+    driver: "json-file"
+    options:
+      max-size: "10m"
+      max-file: "3"
+#--------------------------------------------------
 networks:
   labaspapi_0_network:
     driver: bridge
 #--------------------------------------------------
 x-api: &api
+  <<: *log
   restart: always
   environment:
     - ASPNETCORE_ENVIRONMENT=Production
@@ -12,6 +20,7 @@ x-api: &api
 #--------------------------------------------------
 services:
   labaspapi_0_nginx:
+    <<: *log
     restart: always
     image: nginx:latest
     container_name: labaspapi_0_nginx
@@ -78,4 +87,3 @@ services:
       context: ./LabAspApi_CCCC
     image: labaspapi_cccc:green
     container_name: labaspapi_cccc_green
-#--------------------------------------------------
