--- a/LabAspApi_1/docker-compose.yml
+++ b/LabAspApi_1/docker-compose.yml
@@ -1,8 +1,16 @@
+x-log: &log
+  logging:
+    driver: "json-file"
+    options:
+      max-size: "10m"
+      max-file: "3"
+#--------------------------------------------------
 networks:
   labaspapi_1_network:
     driver: bridge
 #--------------------------------------------------
 x-api: &api
+  <<: *log
   restart: always
   environment:
     - ASPNETCORE_ENVIRONMENT=Production
@@ -12,6 +20,7 @@ x-api: &api
 #--------------------------------------------------
 services:
   labaspapi_1_nginx:
+    <<: *log
     restart: always
     image: nginx:latest
     container_name: labaspapi_1_nginx
