--- a/LabAspApi_2/nginx_temp.conf
+++ b/LabAspApi_2/nginx_temp.conf
@@ -16,12 +16,12 @@ http {
 {{locations}}
         location = /favicon.ico {
             log_not_found off;
+            access_log off;
             return 204;
         }
 
         location / {
             deny all;
-            error_log /dev/null emerg;
         }
     }
 }
