Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi{server labaspapi_blue:5000;}
+upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
@@ -24,12 +24,12 @@ location /api/cccc/ {proxy_pass http://labaspapi_cccc/;}
 
         location = /favicon.ico {
             log_not_found off;
+            access_log off;
             return 204;
         }
 
         location / {
             deny all;
-            error_log /dev/null emerg;
         }
     }
 }
