Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
 upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
-upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
+upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
 
     server {
