Final deployment completed

--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_gggg{server labaspapi_gggg_green:5000;}
+upstream labaspapi_gggg{server labaspapi_gggg_blue:5000;}
 upstream labaspapi_hhhh{server labaspapi_hhhh_green:5000;}
 upstream labaspapi_kkkk{server labaspapi_kkkk_green:5000;}
 
@@ -16,14 +16,18 @@ upstream labaspapi_kkkk{server labaspapi_kkkk_green:5000;}
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /gggg/ {proxy_pass http://labaspapi_gggg/;}
-location /hhhh/ {proxy_pass http://labaspapi_hhhh/;}
-location /kkkk/ {proxy_pass http://labaspapi_kkkk/;}
+location /api/gggg/ {proxy_pass http://labaspapi_gggg/;}
+location /api/hhhh/ {proxy_pass http://labaspapi_hhhh/;}
+location /api/kkkk/ {proxy_pass http://labaspapi_kkkk/;}
 
         location = /favicon.ico {
             log_not_found off;
             access_log off;
             return 204;
+        }
+
+        location / {
+            deny all;
         }
     }
 }
