--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_green:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
@@ -16,14 +16,18 @@ upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /dddd/ {proxy_pass http://labaspapi_dddd/;}
-location /eeee/ {proxy_pass http://labaspapi_eeee/;}
-location /ffff/ {proxy_pass http://labaspapi_ffff/;}
+location /api/dddd/ {proxy_pass http://labaspapi_dddd/;}
+location /api/eeee/ {proxy_pass http://labaspapi_eeee/;}
+location /api/ffff/ {proxy_pass http://labaspapi_ffff/;}
 
         location = /favicon.ico {
             log_not_found off;
             access_log off;
             return 204;
+        }
+
+        location / {
+            deny all;
         }
     }
 }
