--- a/LabAspApi_2/nginx/nginx.conf
+++ b/LabAspApi_2/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_gggg{server labaspapi_gggg_green:5000;}
+upstream labaspapi_gggg{server labaspapi_gggg_blue:5000;}
 upstream labaspapi_hhhh{server labaspapi_hhhh_blue:5000;}
 upstream labaspapi_kkkk{server labaspapi_kkkk_blue:5000;}
 
@@ -16,9 +16,9 @@ upstream labaspapi_kkkk{server labaspapi_kkkk_blue:5000;}
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /api/gggg/ {proxy_pass http://labaspapi_gggg/;}
-location /api/hhhh/ {proxy_pass http://labaspapi_hhhh/;}
-location /api/kkkk/ {proxy_pass http://labaspapi_kkkk/;}
+location /gggg/api/ {proxy_pass http://labaspapi_gggg/;}
+location /hhhh/api/ {proxy_pass http://labaspapi_hhhh/;}
+location /kkkk/api/ {proxy_pass http://labaspapi_kkkk/;}
 
         location = /favicon.ico {
             log_not_found off;
