--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi_dddd{server labaspapi_dddd_blue:5000;}
+upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_blue:5000;}
 upstream labaspapi_ffff{server labaspapi_ffff_blue:5000;}
 
@@ -16,9 +16,9 @@ upstream labaspapi_ffff{server labaspapi_ffff_blue:5000;}
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /api/dddd/ {proxy_pass http://labaspapi_dddd/;}
-location /api/eeee/ {proxy_pass http://labaspapi_eeee/;}
-location /api/ffff/ {proxy_pass http://labaspapi_ffff/;}
+location /dddd/api/ {proxy_pass http://labaspapi_dddd/;}
+location /eeee/api/ {proxy_pass http://labaspapi_eeee/;}
+location /ffff/api/ {proxy_pass http://labaspapi_ffff/;}
 
         location = /favicon.ico {
             log_not_found off;
