Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-upstream labaspapi{server labaspapi_blue:5000;}
+upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
@@ -17,10 +17,10 @@ upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
         include /etc/nginx/common/proxy_common.conf;
 
-location /api/svwl/ {proxy_pass http://labaspapi/;}
-location /api/aaaa/ {proxy_pass http://labaspapi_aaaa/;}
-location /api/bbbb/ {proxy_pass http://labaspapi_bbbb/;}
-location /api/cccc/ {proxy_pass http://labaspapi_cccc/;}
+location /svwl/api/ {proxy_pass http://labaspapi/;}
+location /aaaa/api/ {proxy_pass http://labaspapi_aaaa/;}
+location /bbbb/api/ {proxy_pass http://labaspapi_bbbb/;}
+location /cccc/api/ {proxy_pass http://labaspapi_cccc/;}
 
         location = /favicon.ico {
             log_not_found off;
