--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -5,11 +5,27 @@ events {
 }
 
 http {
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+    limit_req zone=one burst=20 nodelay;
+
 {{upstreams}}
+    # HTTP -> HTTPS 리디렉션 서버 블록
     server {
         listen 80;
-        
+        server_name serverwill.net;
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS 서버 블록
+    server {
+        listen 443 ssl;
         server_name servewill.net;
+        ssl_certificate /etc/nginx/ssl/serverwillnet.crt;
+        ssl_certificate_key /etc/nginx/ssl/serverwillnet.key;
 
         include /etc/nginx/common/proxy_common.conf;
 
