--- a/LabAspApi_0/nginx/common/proxy_common.conf
+++ b/LabAspApi_0/nginx/common/proxy_common.conf
@@ -1,9 +1,33 @@
+# HTTP 버전 및 설정
 proxy_http_version 1.1;
-proxy_set_header Host $host;
-proxy_set_header X-Forwarded-For $remote_addr;
-proxy_set_header Connection "Upgrade";
-proxy_read_timeout 10s;
-proxy_connect_timeout 5s;
-client_max_body_size 10M;
 proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "Upgrade";
+
+# 헤더 설정
+proxy_set_header Host $host;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+# Gzip 압축 설정
+gzip on;
+gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+gzip_min_length 1024;
+gzip_vary on;
+
+# 버퍼 설정 최적화
+proxy_buffering on;
+proxy_buffers 8 16k;
+proxy_buffer_size 8k;
+
+# 타임아웃 설정
+proxy_read_timeout 30s;
+proxy_connect_timeout 10s;
+keepalive_timeout 60s;
+
+# 클라이언트 요청 크기 제한
+client_max_body_size 10M;
+client_body_buffer_size 16k;
+
+# 웹소켓 및 연결 관리
 proxy_cache_bypass $http_upgrade;
+proxy_set_header Connection keep-alive;
+proxy_send_timeout 30s;
