--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -5,15 +5,32 @@ events {
 }
 
 http {
-upstream labaspapi{server labaspapi_green:5000;}
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+    limit_req zone=one burst=20 nodelay;
+
+upstream labaspapi{server labaspapi_blue:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
+    # HTTP -> HTTPS 리디렉션 서버 블록
     server {
         listen 80;
-        
+        server_name serverwill.net;
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS 서버 블록
+    server {
+        listen 443 ssl;
         server_name servewill.net;
+        ssl_certificate /usr/share/svwln/svwln.crt;
+        ssl_certificate_key /usr/share/svwln/svwln.key;
+        #ssl_trusted_certificate /usr/share/svwln/svwln-chain-only.pem;
 
         include /etc/nginx/common/proxy_common.conf;
 
