--- a/LabAspApi_0/nginx_temp.conf
+++ b/LabAspApi_0/nginx_temp.conf
@@ -17,15 +17,15 @@ http {
     server {
         listen 80;
         server_name serverwill.net;
-        return 301 https://$host$request_uri;
+        return 301 https://$host:10110$request_uri;
     }
 
     # HTTPS 서버 블록
     server {
         listen 443 ssl;
         server_name servewill.net;
-        ssl_certificate /etc/nginx/ssl/serverwillnet.crt;
-        ssl_certificate_key /etc/nginx/ssl/serverwillnet.key;
+        ssl_certificate /usr/share/svwln/svwln.crt;
+        ssl_certificate_key /usr/share/svwln/svwln.key;
 
         include /etc/nginx/common/proxy_common.conf;
 
