Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -12,16 +12,16 @@ http {
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
     limit_req zone=one burst=20 nodelay;
 
-upstream labaspapi{server labaspapi_blue:5000;}
+upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
-upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
+upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     # HTTP -> HTTPS 리디렉션 서버 블록
     server {
         listen 80;
         server_name serverwill.net;
-        return 301 https://$host$request_uri;
+        return 301 https://$host:10110$request_uri;
     }
 
     # HTTPS 서버 블록
@@ -30,7 +30,6 @@ upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
         server_name servewill.net;
         ssl_certificate /usr/share/svwln/svwln.crt;
         ssl_certificate_key /usr/share/svwln/svwln.key;
-        #ssl_trusted_certificate /usr/share/svwln/svwln-chain-only.pem;
 
         include /etc/nginx/common/proxy_common.conf;
 
