Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
 
 upstream labaspapi{server labaspapi_green:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
-upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
+upstream labaspapi_bbbb{server labaspapi_bbbb_blue:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
     # HTTP -> HTTPS 리디렉션 서버 블록
