--- a/LabAspApi_1/nginx/nginx.conf
+++ b/LabAspApi_1/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
 upstream labaspapi_dddd{server labaspapi_dddd_green:5000;}
 upstream labaspapi_eeee{server labaspapi_eeee_blue:5000;}
-upstream labaspapi_ffff{server labaspapi_ffff_blue:5000;}
+upstream labaspapi_ffff{server labaspapi_ffff_green:5000;}
 
     server {
         listen 80;
