--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,15 @@ jobs:
 
       - name: Run deploy.sh for LabAspApi_0
         run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi_0/deploy.sh
+          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi/LabAspApi_0/deploy.sh
         shell: powershell
 
       - name: Run deploy.sh for LabAspApi_1
         run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi_1/deploy.sh
+          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi/LabAspApi_1/deploy.sh
         shell: powershell
 
       - name: Run deploy.sh for LabAspApi_2
         run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi_2/deploy.sh
+          & "C:\Program Files\Git\bin\bash.exe" ./LabAspApi/LabAspApi_2/deploy.sh
         shell: powershell
