Final deployment completed

--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     limit_req zone=one burst=20 nodelay;
 
 upstream labaspapi{server labaspapi_green:5000;}
-upstream labaspapi_aaaa{server labaspapi_aaaa_blue:5000;}
+upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
 upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
 
