--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,20 +20,15 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Run deploy.sh for LabAspApi_0
-        working-directory: LabAspApi_0
+      - name: Run deploy.sh for dynamically detected folders
         run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
-        shell: powershell
-
-      - name: Run deploy.sh for LabAspApi_1
-        working-directory: LabAspApi_1
-        run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
-        shell: powershell
-
-      - name: Run deploy.sh for LabAspApi_2
-        working-directory: LabAspApi_2
-        run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
+          Get-ChildItem -Directory -Filter "LabAspApi_*" | ForEach-Object {
+            $deployScript = Join-Path $_.FullName "deploy.sh"
+            if (Test-Path $deployScript) {
+              Write-Host "Running deploy.sh in $($_.Name)"
+              & "C:\Program Files\Git\bin\bash.exe" $deployScript
+            } else {
+              Write-Host "deploy.sh not found in $($_.Name), skipping."
+            }
+          }
         shell: powershell
