--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,18 +20,25 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Run deploy.sh for dynamically detected folders
+      - name: Find LabAspApi folders
+        id: find-folders
         run: |
-          $baseDir = "$env:GITHUB_WORKSPACE"
-          Get-ChildItem -Path $baseDir -Directory -Filter "LabAspApi_*" | ForEach-Object {
-            $folderPath = $_.FullName
-            $deployScript = Join-Path $folderPath "deploy.sh"
-
-            if (Test-Path $deployScript) {
-              Write-Host "Running deploy.sh in $folderPath"
-              & "C:\Program Files\Git\bin\bash.exe" $deployScript
-            } else {
-              Write-Host "deploy.sh not found in $folderPath, skipping."
+          $rootPath = "${{ github.workspace }}"
+          $folders = Get-ChildItem -Directory -Path $rootPath | Where-Object { $_.Name -match '^LabAspApi_[\w]+$' }
+          $validFolders = @()
+          foreach ($folder in $folders) {
+            if (Test-Path "$($folder.FullName)\deploy.sh") {
+              $validFolders += $folder.Name
             }
+          }
+          Write-Output "::set-output name=folders::$($validFolders -join ',')"
+        shell: powershell
+
+      - name: Deploy scripts
+        run: |
+          $folders = "${{ steps.find-folders.outputs.folders }}".Split(',')
+          foreach ($folder in $folders) {
+            Write-Host "Running deploy.sh in $folder"
+            & "C:\Program Files\Git\bin\bash.exe" "$Env:GITHUB_WORKSPACE\$folder\deploy.sh"
           }
         shell: powershell
