--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Find LabAspApi folders
+      - name: Find folders
         id: find-folders
         run: |
           $rootPath = "${{ github.workspace }}"
@@ -39,6 +39,8 @@ jobs:
           $folders = "${{ steps.find-folders.outputs.folders }}".Split(',')
           foreach ($folder in $folders) {
             Write-Host "Running deploy.sh in $folder"
-            & "C:\Program Files\Git\bin\bash.exe" "$Env:GITHUB_WORKSPACE\$folder\deploy.sh"
+            Push-Location "$Env:GITHUB_WORKSPACE\$folder"
+            & "C:\Program Files\Git\bin\bash.exe" "./deploy.sh"
+            Pop-Location
           }
         shell: powershell
