--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Find folders
+      - name: Find LabAspApi folders
         id: find-folders
         run: |
           $rootPath = "${{ github.workspace }}"
@@ -31,16 +31,15 @@ jobs:
               $validFolders += $folder.Name
             }
           }
-          Write-Output "::set-output name=folders::$($validFolders -join ',')"
+          $outputPath = "${{ github.env }}"
+          Add-Content $outputPath "FOLDERS=$($validFolders -join ',')"
         shell: powershell
-
+      
       - name: Deploy scripts
         run: |
-          $folders = "${{ steps.find-folders.outputs.folders }}".Split(',')
+          $folders = $Env:FOLDERS.Split(',')
           foreach ($folder in $folders) {
             Write-Host "Running deploy.sh in $folder"
-            Push-Location "$Env:GITHUB_WORKSPACE\$folder"
-            & "C:\Program Files\Git\bin\bash.exe" "./deploy.sh"
-            Pop-Location
+            & "C:\Program Files\Git\bin\bash.exe" "$Env:GITHUB_WORKSPACE\$folder\deploy.sh"
           }
         shell: powershell
