--- a/LabAspApi_0/nginx/nginx.conf
+++ b/LabAspApi_0/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
 upstream labaspapi{server labaspapi_blue:5000;}
 upstream labaspapi_aaaa{server labaspapi_aaaa_green:5000;}
 upstream labaspapi_bbbb{server labaspapi_bbbb_green:5000;}
-upstream labaspapi_cccc{server labaspapi_cccc_green:5000;}
+upstream labaspapi_cccc{server labaspapi_cccc_blue:5000;}
 
     # HTTP -> HTTPS 리디렉션 서버 블록
     server {
