--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,29 +20,14 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Find LabAspApi folders
-        id: find-folders
+      - name: Find and Run deploy.sh for each LabAspApi folder
         run: |
-          $rootPath = "${{ github.workspace }}"
-          $folders = Get-ChildItem -Directory -Path $rootPath | Where-Object { $_.Name -match '^LabAspApi_[\w]+$' }
-          $validFolders = @()
+          $rootDir = 'C:\actions-runner\_work\LabAspApi\LabAspApi'
+          $folders = Get-ChildItem -Path $rootDir -Directory | Where-Object { $_.Name -match '^LabAspApi_\d+$' }
           foreach ($folder in $folders) {
-            if (Test-Path "$($folder.FullName)\deploy.sh") {
-              $validFolders += $folder.Name
+            $deployScript = "$($folder.FullName)\deploy.sh"
+            if (Test-Path $deployScript) {
+              & "C:\Program Files\Git\bin\bash.exe" $deployScript
             }
-          }
-          $outputPath = "${{ github.env }}"
-          Add-Content $outputPath "FOLDERS=$($validFolders -join ',')"
-        shell: powershell
-      
-      - name: Deploy scripts
-        run: |
-          $folders = $Env:FOLDERS.Split(',')
-          foreach ($folder in $folders) {
-            $deployPath = "$Env:GITHUB_WORKSPACE\$folder\deploy.sh"
-            $deployDir = Split-Path -Parent $deployPath
-            Push-Location $deployDir
-            & "C:\Program Files\Git\bin\bash.exe" "./deploy.sh"
-            Pop-Location
           }
         shell: powershell
